examples/errors/MultipleProperties.con
clone x =*= x == x .

clone y =*= y == y .
